--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="I am a first year, pre-business major at UCR">
+  <meta name="author" content="862367001">
 
-  <title>John Doe - Business Administration</title>
+  <title>Liliana Ramirez Morales - Accounting</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Liliana Ramirez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+       <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/LilianaRamirezMorales.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Liliana Ramirez Morales
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
-
-        Enter bio here<br><br>
-
-        Enter bio here
+        <p class="lead mb-4">Hello I am a pre-business major working towards getting my Bachelors in Business Administration with a Concentration in Accounting. I am dedicated and love to work with others. I have great team building skills as well as great problem solving skills. Organizing is something that I enjoy doing so as a result I like to plan everything out and have a clear schedule on what needs to be done. However, I can also work with fast paced enviroments and I understand that some things in life can't be planned out. Consequently in these scenarios I still bring the best out in me ven though it may not be as organized and planned as I would like. I do believe that great results come form spotaneous short term decisions. <br><br>
+        In my free time I like to paint, listen to music, hang out with friends and family, watch korean dramas. I love to study and stay focus however I love to have fun and do stuff outside of my academic life. I have developed a passion fro painting, drawing, and just about anything that has to do with art. I paint landscapes and or singular dimension objects. I enjoy playing around with the misture of color when paiting. My family is important to me and it is also what comes first in my life so I am really attached to them. We have a great communication and spend lots of time together. I like to listen to a variety of music genres because they are all unique and I can vibe to them differently at different points in mi life. I have developed a hobby of watching lots of Asian dramas particular Korean dramas. I got really addicted to watching romance ramas and I just love how romance is portrayed in Korean dramas. It's heartwaring and whenever I have a chance I am watching a korean drama.  <br><br>
+        Self care is important to me and I really do believe that confidence is key and it can lead to a great success. I am an advocate for self love because I was once in a point in my life where I face a setback and needed to learn to love myself for who I am and build confidence. Thankfully I achieve it and ever since then I notice how much it has helped me grow as a person. Simialrly, I want others to build that confidence within themselves and not build limits on themselves. I have experience translating between Spanish and Englsih and vice versa. Spanish is my first language and I understand it perfectly, I learned English through school in ELemenatry. I have translation experience both informally and formally and I enjoy doing. To me it is fascinating to translate because it's incredible to see how emotions, opinions, and tone shift between two langauges.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="www.linkedin.com/in/liliana-ramirez-b274b0265">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/LilianaRM">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://instagram.com/lllii.lllliii?igshid=YmMyMTA2M2Y=">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:ramirezliliana354@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -153,10 +151,10 @@
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
             <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div>Concentration in Accounting</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2022 - June 2026</span>
           </div>
         </div>
 
@@ -191,7 +189,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+              <img src="img/image10.jpeg" width="500px">
+              <img src="img/image11.jpeg" width="500px"><br>
+              <img src="img/image12.jpeg" width="500px">
+              <img src="img/image13.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +200,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Liliana Ramirez Morales</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
